# rpg-raylib

./: CMakeLists.txt  flake.nix
.github/workflows/: ci.yml
assets/monsters/bob/: default.json
assets/moves/: bite.json  growl.json  scratch.json
docs/: memory-management.md
include/: battle.h  map.h  menu.h  mon.h
nix/: package.nix  shell.nix
scripts/: check.sh  clang-format.ps1  clang-tidy.ps1  format.sh
src/: battle.c  game.c  main.c  map.c  menu.c  mon.c  pause.c
